# sql-etl-analytics

./: .gitignore  README.md  app.py  exp.ipynb  exp_grocerydb.ipynb  pipeline.yaml  pyproject.toml
notebooks/: exp.ipynb
src/app/: app.ipynb  app_dashboard.py
src/etl/: eda.ipynb  extract.py  extract_mother_duck.ipynb  md.py  wrangle.ipynb
src/logs/: eda-pipeline.ipynb  extract-pipeline.ipynb
