[tool.poetry]
name = "team-2-hf"
version = "0.1.0"
description = "ETL/RAG pipelines with Ploomber"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ploomber = "^0.23.0"
jupysql = "^0.10.1"
jupysql-plugin = "^0.2.2"
duckdb-engine = "^0.9.2"
ipykernel = "^6.25.2"
farm-haystack = {extras = ["inference"], version = "^1.20.1"}
python-dotenv = "^1.0.0"
openai = "^0.28.0"
ipywidgets = "^8.1.1"
chainlit = "^0.7.0"
pandas = "2.0.3"
kaggle = "^1.5.16"
voila = "^0.5.4"
matplotlib = "^3.8.0"
openpyxl = "^3.1.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
